# kinema

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  GetThirdPartyLibraries.bat  LICENSE  LICENSE.txt  kinema.build  kinema.sln  vcpkg_x64-windows.txt
data/: 16cube.xraw  axis.xraw  cube.xraw  dumpster.vox  imgui.ini  menger.xraw
data/shaders/: screen.frag  screen.vert  test.frag  test.vert  vertColor.frag
libraries/: libglew32.lib  libglew32d.lib
source/: Camera.cpp  Camera.h  Common.cpp  Common.h  DebugRenderer.cpp  DebugRendering.cpp  DebugRendering.h  Device.cpp  Device.h  Engine.cpp  Engine.h  File.cpp  File.h  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  Main.cpp  MemoryStream.cpp  MemoryStream.h  Rigidbody.h  Scene.h  Shader.cpp  Shader.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h  Voxel.cpp  Voxel.h  VoxelChunk.cpp  VoxelChunk.h  VoxelMesh.cpp  VoxelMesh.h  kinema.vcxproj  kinema.vcxproj.filters
source/Renderer/: DebugRenderer.cpp  DebugRenderer.h  Device.cpp  IndexBuffer.cpp  Renderer.h  Shader.cpp  Shader.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp
source/Shaders/: test.frag  test.vert  vertColor.vert
source/glad/: glad.c  glad.h
source/imgui/: imgui_impl_opengl3.cpp
